// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination /> should render using props 1`] = `
<div>
  <div
    class="junipero pagination"
  >
    <i
      class="junipero-icons previous"
    >
      expand_more
    </i>
    <div
      class="junipero pagination pagination-item"
    >
      1
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      2
    </div>
    <div
      class="junipero pagination pagination-item pagination-item-active"
    >
      3
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      4
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      5
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      6
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      7
    </div>
    <i
      class="junipero-icons next"
    >
      expand_more
    </i>
  </div>
</div>
`;

exports[`<Pagination /> should render using props 2`] = `
<div>
  <div
    class="junipero pagination"
  >
    <i
      class="junipero-icons previous"
    >
      expand_more
    </i>
    <div
      class="junipero pagination pagination-item"
    >
      1
    </div>
    <div
      class="junipero pagination pagination-item pagination-item-dots"
    >
      ...
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      5
    </div>
    <div
      class="junipero pagination pagination-item pagination-item-active"
    >
      6
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      7
    </div>
    <div
      class="junipero pagination pagination-item pagination-item-dots"
    >
      ...
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      10
    </div>
    <i
      class="junipero-icons next"
    >
      expand_more
    </i>
  </div>
</div>
`;

exports[`<Pagination /> should render using props 3`] = `
<div>
  <div
    class="junipero pagination"
  >
    <i
      class="junipero-icons previous-disabled"
    >
      expand_more
    </i>
    <div
      class="junipero pagination pagination-item pagination-item-active"
    >
      1
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      2
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      3
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      4
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      5
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      6
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      7
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      8
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      9
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      10
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      11
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      12
    </div>
    <i
      class="junipero-icons next"
    >
      expand_more
    </i>
  </div>
</div>
`;

exports[`<Pagination /> should render using props 4`] = `
<div>
  <div
    class="junipero pagination"
  >
    <i
      class="junipero-icons previous-disabled"
    >
      expand_more
    </i>
    <div
      class="junipero pagination pagination-item pagination-item-active"
    >
      1
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      2
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      3
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      4
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      5
    </div>
    <div
      class="junipero pagination pagination-item pagination-item-dots"
    >
      ...
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      12
    </div>
    <i
      class="junipero-icons next"
    >
      expand_more
    </i>
  </div>
</div>
`;

exports[`<Pagination /> should render using props 5`] = `
<div>
  <div
    class="junipero pagination"
  >
    <i
      class="junipero-icons previous"
    >
      expand_more
    </i>
    <div
      class="junipero pagination pagination-item"
    >
      1
    </div>
    <div
      class="junipero pagination pagination-item pagination-item-dots"
    >
      ...
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      6
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      7
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      8
    </div>
    <div
      class="junipero pagination pagination-item"
    >
      9
    </div>
    <div
      class="junipero pagination pagination-item pagination-item-active"
    >
      10
    </div>
    <i
      class="junipero-icons next-disabled"
    >
      expand_more
    </i>
  </div>
</div>
`;
